# DejaQ

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  start.sh
adjuster-test/: pyproject.toml
adjuster-test/configs/: v2_gemma_e2b.py
adjuster-test/harness/: metrics.py
chat/: .env.local.example  .gitignore
docs/: admin-access.md  cli-instructions.md  getting-started.md  openai-compat-api.md
evals/adjuster/: .gitignore
evals/normalizer/: .gitignore  README.md
frontend/: .env.local.example  README.md  middleware.ts  package.json
frontend/app/: globals.css
frontend/components/: ConfirmDialog.tsx  Modal.tsx  Sidebar.tsx  Topbar.tsx
frontend/lib/: api.ts  authMode.ts  external-models.ts  types.ts
normalization-test/configs/: v19_canonical_question_gemma_e4b.py  v21_raw_bge_base.py  v22_opinion_llm_rewrite_bge_small.py
normalization-test/dataset/: prompts_v2.json  prompts_v7.json
normalization-test/harness/: metrics.py
scripts/: demo.sh
server/: .env.example  .gitignore  GEMINI.md  README.md  alembic.ini  celerybeat-schedule  chat-completions-demo.html  dejaq-course.html  pyproject.toml  start.sh
server/alembic/: env.py
server/app/: celery_app.py  config.py  main.py
server/cli/: admin.py  stats.py  tui.py  ui.py
server/docs/: current_status.md  qa_cowork_prompt.md
server/tests/: conftest.py  test_admin_api_basic.py  test_admin_api_resources.py  test_admin_async_safety.py  test_admin_auth.py  test_admin_route_boundaries.py  test_admin_schemas.py  test_admin_service.py  test_admin_user_actor_scoping.py  test_cli_api_parity.py  (+13 more)
(+159 files in other folders)
